<resources>
    <string name="app_name">DragonBallDemo</string>
    <string name="play">PLAY</string>
    <string name="score">SCORE</string>
    <string name="win">WIN!</string>
    <string name="attack_number">Attack Number:</string>
    <string name="ok">OK</string>
    <string name="set_player_1_name">Set player 1 name:</string>
    <string name="set_player_2_name">Set player 2 name:</string>
    <string name="start">START</string>
    <string name="top_players">Top Players</string>
    <string name="player_name">Player name</string>
    <string name="player_score">Player score</string>
</resources>
