<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blur_80"
    android:focusable="true"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_height="440dp">

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_gravity="center|top"
            android:layout_height="wrap_content"
            tools:text="PLAYER NAME"/>


        <TextView
            android:id="@+id/win_txt"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/player_name"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/win"/>


        <ImageView
            android:id="@+id/player_img"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_below="@id/win_txt"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            tools:src="@drawable/ic_goku_player"/>




        <TextView
            android:id="@+id/attack_number_txt"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_below="@id/player_img"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/attack_number"/>

        <TextView
            android:id="@+id/attack_number"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_below="@id/attack_number_txt"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            tools:text="3"/>





        <TextView
            android:id="@+id/ok_btn"
            android:textSize="22sp"
            android:layout_width="80dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/attack_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@color/gray_A9A9A9"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>




    </RelativeLayout>


</LinearLayout>