<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_arena"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="10dp">

        <ProgressBar
            android:id="@+id/hp_player_a"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/hp_progress_bar" />


        <ProgressBar
            android:id="@+id/hp_player_b"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/hp_progress_bar"
            android:rotation="180" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <ImageView
            android:id="@+id/player_a_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_goku_player" />


        <ImageView
            android:id="@+id/player_b_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_vegeta_player" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/result_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/game_menu_container"
        android:background="@color/blur_80"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_height="300dp">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/set_player_1_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|top"
                android:layout_height="20dp"/>

            <EditText
                android:id="@+id/player_a_et"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:inputType="textPersonName"
                android:gravity="center"
                android:layout_height="60dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/set_player_2_name"
                android:gravity="center"
                android:layout_marginTop="120dp"
                android:layout_gravity="center|top"
                android:layout_height="20dp"/>

            <EditText
                android:id="@+id/player_b_et"
                android:layout_width="match_parent"
                android:layout_marginTop="140dp"
                android:inputType="textVisiblePassword"
                android:maxLength="9"
                android:maxLines="1"
                android:gravity="center"
                android:layout_height="60dp"/>


            <Button
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom|center"
                android:text="@string/start"
                android:layout_height="wrap_content"/>



        </FrameLayout>









    </LinearLayout>

</RelativeLayout>